2025-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Relase 1.28.2-1

2025-04-08  Charlie Gao  <charlie.gao@shikokuchuo.net>

	* inst/include/asio*: Upgraded to Asio 1.28.2
	* inst/include/asio/detail/config.cpp: Ensure ASIO_HAS_SNPRINTF defined

2024-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Simplify to r-ci with included bootstrap

2024-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* DESCRIPTION (Authors@R): Added

2024-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2023-09-20  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2022-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Relase 1.22.1-2

	* inst/include/asio/detail/impl/handler_tracking.ipp: Use vsnprintf
	* inst/include/asio/detail/impl/socket_ops.ipp: Use snprintf
	* inst/include/asio/ip/impl/network_v4.ipp: Idem
	* inst/include/asio/ip/impl/network_v6.ipp: Idem

2022-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Relase 1.22.1-1

	* inst/include/asio*: Upgraded to Asio 1.22.1

2021-11-04  Dirk Eddelbuettel  <edd@debian.org>

 	* README.md: Remove Travis badge
	* .travis.yml: Remove Travis YAML config

2021-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): List GitHub repo and package page

2020-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Small tweaks to CI YAML file

2020-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-11-21  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to focal, bspm, and r-ci

2020-07-13  Dirk Eddelbuettel  <edd@debian.org>
